# pneudrive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
RS485_code/: arduino_code.ino  sendSerial.c
RS485_code/arduino_code/: arduino_code.ino
arduino_code/: phil_testing_protoboard.ino
arduino_code/arduino_imu_calibration/: arduino_imu_calibration.ino
arduino_code/arduino_imu_pose_estimation/: Visualizer.pde  arduino_imu_pose_estimation.ino
arduino_code/arduino_pressure_control/: A4990ValveInterface.cpp  A4990ValveInterface.h  README.md  arduino_pressure_control.ino
arduino_code/arduino_pressure_control/arduino_test.ino/: arduino_test.ino.ino
arduino_code/arduino_pressure_control/include/: A4990ValveInterface.h
arduino_code/arduino_pressure_control/src/: main.cpp
arduino_code/pressure_control/src/: A4990ValveInterface.cpp  main.cpp
arduino_firmware/: README.md
arduino_firmware/src/: main.cpp
beaglebone_setup/: Readme.md  bb_install_script.sh  setIPOnStartup.py  set_ip_on_startup  startup_features  uEnv.txt
config/: leg_hardware.yaml  one_joint.yaml  three_joints.yaml  two_joints.yaml
include/: PressureController.h  PressureController.hpp
include/include/: PressureController.h
launch/: i2c_imu.launch  i2c_pressure.launch  i2c_pressure_control.launch  rs485_pressure.launch  rs485_pressure.launch.py
odroid_setup/: README.md
pcb_design/: BBB_cape.brd  BBB_cape.pro  BBB_cape.sch  README.md  Readme.md  Sch_v3.pro  Sch_v3.sch  Sch_v4.brd  Sch_v4.sch  Sch_v5.brd  Sch_v5.pro  Sch_v5.sch  Sch_v6.brd  Sch_v6.pro  Sch_v6.sch  byu_pressure_control.lbr  digital_filter_design.ipynb  pressure_control_v6.brd
pcb_design/CAM/: Sch_v4.BOR  Sch_v4.GBL  Sch_v4.GBS  Sch_v4.GTL  Sch_v4.GTO  Sch_v4.GTS  Sch_v4.TXT  Sch_v4.cam
pcb_design/CAM/CAMOutputs/GerberFiles/: gerber_job.gbrjob
pcb_design/CAMOutputs/Assembly/: Sch_v5.csv
pcb_design/CAMOutputs/DrillFiles/: drill_1_16.xln
pcb_design/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr
pcb_design/byu_eagle_library/: byu_pressure_control.lbr
pcb_design/v3_old/: Sch_v3.brd
pcb_design/v3_old/CAMOutputs/Assembly/: Sch_v3.txt
pcb_design/v3_old/CAMOutputs/DrillFiles/: drill_1_16.xln
pcb_design/v3_old/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr
pcb_design/v4_old/: Sch_v4.brd  Sch_v4.pro  Sch_v4.sch
python_bindings/: CMakeLists.txt  README.md  example.py
python_bindings/include/: PressureControllerPython.h
python_bindings/src/: PressureControllerPython.cpp
src/: GPIO.cpp  GPIO.h  I2CDevice.cpp  I2CDevice.h  IMUPublisher.cpp  IMUPublisher.h  PressureController.cpp  PressureController.h  i2c_imu_publisher.cpp  i2c_pressure_control.cpp  rs485_pressure_control.cpp
src/src/: PressureController.cpp
