<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pneudrive</name>
  <version>2.0.1</version>
  <description>The pneudrive package</description>
  <maintainer email="curtiscarljohnson@gmail.com">curtis</maintainer>
  <license>Apache-2.0</license>

  <!--Necessary for any ROS 2 package-->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--Not necessary, but following standard ROS 2 package format-->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <!--Libraries specific for pneudrive, not all are necessarily used-->
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rad_msgs</depend>

  <!--Necessary for any ROS 2 package-->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
